--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CARF System - Car Application Request Form</title>
+    <title>CARF System - Online Customer Activation Request Form</title>
     <meta name="description" content="Car Application Request Form System - Vehicle management and request processing" />
     <meta name="author" content="CARF System" />
 
     <meta property="og:title" content="CARF System - Car Application Request Form" />
     <meta property="og:description" content="Car Application Request Form System - Vehicle management and request processing" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@carf_system" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
