rebase the pdf downloading

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CARF System - Online Customer Activation Request Form</title>
-    <meta name="description" content="Car Application Request Form System - Vehicle management and request processing" />
+    <meta name="description" content="Customer Activation Request Form System - Customer management and request processing" />
     <meta name="author" content="CARF System" />
 
-    <meta property="og:title" content="CARF System - Car Application Request Form" />
-    <meta property="og:description" content="Car Application Request Form System - Vehicle management and request processing" />
+    <meta property="og:title" content="CARF System - Customer Activation Request Form" />
+    <meta property="og:description" content="Customer Activation Request Form System - Customer management and request processing" />
     <meta property="og:type" content="website" />
     
     <meta name="twitter:card" content="summary_large_image" />
